<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".TodoTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/newTaskToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:titleTextColor="@color/white"
            tools:title="New Task" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/title"
            android:fontFamily="@font/roboto"
            android:textColor="@color/addColor"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleInpLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_task_title"
                android:inputType="textCapSentences"
                android:paddingStart="8dp"
                android:fontFamily="@font/roboto"
                android:paddingEnd="8dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/description"
            android:fontFamily="@font/roboto"
            android:textColor="@color/addColor"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskInpLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/enter_description"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="5"
                android:minLines="1"
                android:fontFamily="@font/roboto"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/date_and_time"
            android:fontFamily="@font/roboto"
            android:textColor="@color/addColor"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/ic_baseline_date_range_24"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/addColor"
                    android:focusable="false"
                    android:hint="@string/set_date"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:visibility="visible"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timeEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/ic_baseline_access_time_24"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/addColor"
                    android:focusable="false"
                    android:hint="@string/set_time"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/category"
            android:fontFamily="@font/roboto"
            android:textColor="@color/addColor"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_baseline_playlist_add_24"
                app:tint="@color/addColor" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/priority"
            android:fontFamily="@font/roboto"
            android:textColor="@color/addColor"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/priorityInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:checked="true"
                android:text="@string/low"
                android:fontFamily="@font/roboto"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:checked="false"
                android:fontFamily="@font/roboto"
                android:text="@string/medium"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/high"
                android:fontFamily="@font/roboto"
                android:textSize="18sp" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            android:fontFamily="@font/roboto"
            app:backgroundTint="@color/addColor"
            app:cornerRadius="25dp" />
    </LinearLayout>
</ScrollView>